@@ -46,6 +46,7 @@ namespace Nikse.SubtitleEdit.Core.SubtitleFormats
                     new Csv2(),
                     new Csv3(),
                     new Csv4(),
+                    new Csv5(),
                     new DCSubtitle(),
                     new DCinemaSmpte2010(),
                     new DCinemaSmpte2007(),
